k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lab09
  labels:
    app.kubernetes.io/part-of: devops-core-course
    app.kubernetes.io/managed-by: kubectl
    course.devops.lab: "09"
