k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-info-py
  namespace: lab09
  labels:
    app.kubernetes.io/name: devops-info-py
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: devops-core-course
    app.kubernetes.io/version: lab02
spec:
  replicas: 3
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-info-py
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-info-py
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: devops-core-course
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: devops-info-py
          image: vladk6813050/devops-info-service-py:lab02
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 2
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
