k8s/go-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-info-go
  namespace: lab09
  labels:
    app.kubernetes.io/name: devops-info-go
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: devops-core-course
    app.kubernetes.io/version: lab09
spec:
  replicas: 2
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-info-go
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-info-go
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: devops-core-course
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: devops-info-go
          image: devops-info-service-go:lab09
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 2
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
