k8s/go-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-go
  namespace: lab09
  labels:
    app.kubernetes.io/name: devops-info-go
    app.kubernetes.io/part-of: devops-core-course
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: devops-info-go
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30081
      protocol: TCP
