k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-py
  namespace: lab09
  labels:
    app.kubernetes.io/name: devops-info-py
    app.kubernetes.io/part-of: devops-core-course
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: devops-info-py
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
      protocol: TCP
